Añadido elemento label

--- a/_html5/ejemplos/forms/input-color.html
+++ b/_html5/ejemplos/forms/input-color.html
@@ -8,11 +8,11 @@
 <body>
 
 <h1>Input Color</h1>
-Campo de tipo input que nos muestra una paleta de colores
+<p>Campo de tipo input que nos muestra una paleta de colores.</p>
 
 <form action="#">
-  Elige tu color favorito:
-  <input type="color" name="favcolor" value="#00ff00">
+  <label for="favcolor">Elige tu color favorito:</label>
+  <input type="color" name="favcolor" id="favcolor" value="#00ff00">
   <input type="submit" value="Enviar">
 </form>
 
