--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="container text-center">
-    <p>The page you are looking for cannot be found.</p>
+    <p>No podemos encontrar la página que buscas.</p>
     <h2>404</h2>
+    <p>Prueba a en alguno de <a href="http://www.manualweb.net/tutoriales/">nuestros tutoriales de Manual Web</a>.<p>
 </div>
