Modificada la variable server.

--- a/random.html
+++ b/random.html
@@ -3,9 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
 
-//let server = "{{ site.url }}";
-
-let server = {{site.url}};
+let server = "{{ site.url }}";
 
 let x = [
 
