Incluida estructura HTML5

--- a/random.html
+++ b/random.html
@@ -1,8 +1,14 @@
 ---
 ---
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Artículo Random</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
+<body>
 <script>
-
 let server = "{{ site.url }}";
 
 let x = [
