--- a/random.html
+++ b/random.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <script>
-let server = "{{ site.url }}";
+//let server = "{{ site.url }}";
+
+let server = "http://www.manualweb.net"
 
 let x = [
 
@@ -74,3 +76,5 @@ $( document ).ready(function() {
 });
 
 </script>
+</body>
+</html>
